--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,8 +16,11 @@ dependencies = [
     "click>=8.1.0",
     "uvloop>=0.19.0; sys_platform != 'win32'",
     "PyJWT>=2.8.0",
-    "tomli>=2.0.0; python_version < '3.11'",
+    "tomli>=2.0.0",
     "tomli-w>=1.0.0",
+    "cryptography>=41.0.0",
+    "aiohttp>=3.9.0",
+    "agent_connect",
 ]
 readme = "README.md"
 requires-python = ">= 3.11"
