--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,8 +14,7 @@ dependencies = [
     "click>=8.1.0",
     "uvloop>=0.19.0; sys_platform != 'win32'",
     "PyJWT>=2.8.0",
-    "tomli>=2.0.0",
-    "tomli-w>=1.0.0",
+    "rtoml>=0.9.0",
     "cryptography>=41.0.0",
     "aiohttp>=3.9.0",
     "agent_connect",
@@ -26,7 +25,7 @@ readme = "README.md"
 requires-python = ">= 3.11"
 
 [project.scripts]
-anp-proxy = "anp_proxy.anp_proxy:main"
+anp-proxy = "anp_proxy.cli:main"
 
 [project.optional-dependencies]
 dev = [
@@ -54,7 +53,7 @@ line-length = 88
 
 [tool.ruff.lint]
 select = ["E", "F", "I", "N", "W", "UP"]
-ignore = ["E501"]
+ignore = ["E501", "E402"]
 
 [tool.ruff.format]
 quote-style = "double"
