--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,20 +6,20 @@ authors = [{ name = "Your Name", email = "your.email@example.com" }]
 dependencies = [
     "fastapi>=0.104.0",
     "uvicorn[standard]>=0.24.0",
-    "websockets>=12.0",
-    "httpx>=0.25.0",
-    "pydantic>=2.5.0",
-    "pydantic-settings>=2.1.0",
-    "structlog>=23.2.0",
-    "click>=8.1.0",
-    "uvloop>=0.19.0; sys_platform != 'win32'",
-    "PyJWT>=2.8.0",
-    "rtoml>=0.9.0",
-    "cryptography>=41.0.0",
-    "aiohttp>=3.9.0",
-    "agent_connect",
-    "PyMySQL>=1.1.0",
-    "python-dotenv>=1.0.0",
+    "websockets",
+    "httpx",
+    "pydantic",
+    "pydantic-settings",
+    "structlog",
+    "click",
+    "uvloop; sys_platform != 'win32'",
+    "PyJWT",
+    "rtoml",
+    "cryptography",
+    "aiohttp",
+    "agent-connect",
+    "PyMySQL",
+    "python-dotenv",
 ]
 readme = "README.md"
 requires-python = ">= 3.11"
@@ -35,7 +35,7 @@ dev = [
     "black>=23.0.0",
     "isort>=5.12.0",
     "mypy>=1.7.0",
-    "ruff>=0.1.0",
+    "ruff",
 ]
 
 [tool.pytest.ini_options]
@@ -73,4 +73,7 @@ split-on-trailing-comma = true
 allow-dict-calls-with-keyword-arguments = false
 
 [dependency-groups]
-dev = ["pre-commit>=4.3.0"]
+dev = [
+    "pre-commit>=4.3.0",
+    "vulture>=2.14",
+]
