--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,31 +2,30 @@
 name = "anp-proxy"
 version = "0.1.0"
 description = "Agent Network Proxy - HTTP over WebSocket tunneling for private networks"
-authors = [
-    {name = "Your Name", email = "your.email@example.com"}
-]
+authors = [{ name = "Your Name", email = "your.email@example.com" }]
 dependencies = [
     "fastapi>=0.104.0",
     "uvicorn[standard]>=0.24.0",
-    "websockets>=12.0",
-    "httpx>=0.25.0",
-    "pydantic>=2.5.0",
-    "pydantic-settings>=2.1.0",
-    "structlog>=23.2.0",
-    "click>=8.1.0",
-    "uvloop>=0.19.0; sys_platform != 'win32'",
-    "PyJWT>=2.8.0",
-    "tomli>=2.0.0",
-    "tomli-w>=1.0.0",
-    "cryptography>=41.0.0",
-    "aiohttp>=3.9.0",
-    "agent_connect",
+    "websockets",
+    "httpx",
+    "pydantic",
+    "pydantic-settings",
+    "structlog",
+    "click",
+    "uvloop; sys_platform != 'win32'",
+    "PyJWT",
+    "rtoml",
+    "cryptography",
+    "aiohttp",
+    "agent-connect",
+    "PyMySQL",
+    "python-dotenv",
 ]
 readme = "README.md"
 requires-python = ">= 3.11"
 
 [project.scripts]
-anp-proxy = "anp_proxy.anp_proxy:main"
+anp-proxy = "anp_proxy.cli:main"
 
 [project.optional-dependencies]
 dev = [
@@ -36,33 +35,45 @@ dev = [
     "black>=23.0.0",
     "isort>=5.12.0",
     "mypy>=1.7.0",
-    "ruff>=0.1.0",
+    "ruff",
 ]
+
+[tool.pytest.ini_options]
+asyncio_mode = "auto"
+testpaths = ["tests"]
+
 
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
 
-[tool.black]
-line-length = 88
-target-version = ['py311']
-
-[tool.isort]
-profile = "black"
-line_length = 88
-
-[tool.mypy]
-python_version = "3.11"
-warn_return_any = true
-warn_unused_configs = true
-disallow_untyped_defs = true
-
 [tool.ruff]
 target-version = "py311"
 line-length = 88
-select = ["E", "F", "I", "N", "W", "UP"]
-ignore = ["E501"]
 
-[tool.pytest.ini_options]
-asyncio_mode = "auto"
-testpaths = ["tests"]
+[tool.ruff.lint]
+select = ["E", "F", "I", "N", "W", "UP"]
+ignore = ["E501", "E402"]
+
+[tool.ruff.format]
+quote-style = "double"
+indent-style = "space"
+skip-magic-trailing-comma = false
+line-ending = "auto"
+# Preview features for better formatting
+preview = true
+
+[tool.ruff.lint.isort]
+combine-as-imports = true
+force-wrap-aliases = true
+split-on-trailing-comma = true
+
+# Enable more strict formatting rules
+[tool.ruff.lint.flake8-comprehensions]
+allow-dict-calls-with-keyword-arguments = false
+
+[dependency-groups]
+dev = [
+    "pre-commit>=4.3.0",
+    "vulture>=2.14",
+]
